[package]
name = "vla"
version = "0.0.0"
description = "Vla"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "shell-sidecar", "macos-private-api", "shell-open"] }
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.108"
chrono = { version = "^0.4.31", features = ["serde"] }
window-vibrancy = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
