[package]
name = "vla"
version = "0.1.0-next.12"
description = ""
authors = ["somfic"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
window-vibrancy = "0.4"
extism = "1.2.0"
thiserror = "1.0"
anyhow = "1.0"
window-shadows = "0.2"
schemars = "0.8"
dirs = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
